<?xml version="1.0"?>
<package format="2">
  <name>rqt_mcbtest</name>
  <version>0.0.0</version>
  <description>The rqt_mcbtest package</description>

  <maintainer email="remireaa@todo.todo">remireaa</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>medlab_motor_control_board</depend>

<!--  <build_depend>medlab_motor_control_board</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>

  <build_export_depend>medlab_motor_control_board</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rqt_gui</build_export_depend>
  <build_export_depend>rqt_gui_cpp</build_export_depend>

  <exec_depend>medlab_motor_control_board</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_cpp</exec_depend>-->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
